--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.9.1
 Django==5.2.5
 django-debug-toolbar==6.0.0
+django-extensions==4.1
+pydotplus==2.0.2
+pyparsing==3.2.5
 sqlparse==0.5.3
