--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Django==5.2.5
 django-debug-toolbar==6.0.0
 django-extensions==4.1
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 pydotplus==2.0.2
+PyJWT==2.10.1
 pyparsing==3.2.5
 sqlparse==0.5.3
